--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Verificar Token do Discord</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
   <div class="container">
     <h1>Verificar Token do Discord</h1>
     <form id="tokenForm">
       <label for="token">Token:</label>
-      <input type="text" id="token" name="token" required placeholder="Digite o token aqui">
+      <input type="text" id="token" name="token" required>
       <select id="tokenType" name="tokenType">
         <option value="user">Token de Usuário (Self Bot)</option>
         <option value="bot">Token de Bot</option>
@@ -22,14 +22,11 @@
     <div id="result"></div>
     <div id="info"></div>
   </div>
-
-  <!-- Rodapé com informações do criador -->
-  <footer>
-    <p>Meu criador é: <strong>vovo666</strong></p>
-    <p>Participe do servidor dele: <a href="https://discord.gg/RKRM6gXSVf" target="_blank">https://discord.gg/RKRM6gXSVf</a></p>
+  <div class="footer">
+    <p>Criador: vovo666</p>
+    <p>Servidor: <a href="https://discord.gg/RKRM6gXSVf" target="_blank">https://discord.gg/RKRM6gXSVf</a></p>
     <p>Ajude ele a crescer!</p>
-  </footer>
-
-  <script src="script.js"></script>
+  </div>
+  <script src="public/script.js"></script>
 </body>
 </html>
